# kea_SOFT_SI_2023_Spring_dev

02._data_formats/: me.json  me.txt  me.xml  me.yaml  read_and_parse.js
02._data_formats/js/: read_and_parse.js
02._data_formats/python/: read_and_parse.py
04._basic_servers/files/: me.csv  me.txt
04._basic_servers/python/: main.py
04._basic_servers/python/routes/: __init__.py  routes.py
06._server_to_server/node/: app.js  package-lock.json  package.json
06._server_to_server/python/: main.py  pyproject.toml
07._dotenv/node/: index.js  package.json
07._dotenv/python/: main.py  pyproject.toml
09._OpenAPI/python/routers/: spacecraft_router.py
