[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["abdulahi roble <abdulahi_2610@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
